# fimi-Server

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: debug.yml  main.yml  newrelease.yml
cmake/: BuildConfig.cmake  FindOptionalPackages.cmake  FindPackages.cmake
cmake/Snippets/: CFindCUDA.cmake  CFindCaffe.cmake  CFindEigen.cmake  CFindMongoose.cmake  CFindOpenCV.cmake  CFindOpenMP.cmake  CFindRtPose.cmake  CFindWebSocketPP.cmake  CFindXNECT.cmake
data/CNNModels/XNECT/StageI/paper/: net.prototxt
data/CNNModels/XNECT/StageII/new/: net.prototxt  snapshot.caffemodel
data/CNNModels/XNECT/StageII/paper/: net.prototxt  snapshot.caffemodel
data/FullBodyTracker/: XNECT.params
src/: main.cpp
src/domainobject/: DelayPerData.h
src/domainvalue/: Mode.h
src/periphery/: WebsocketServer.cpp  WebsocketServer.h
src/periphery/xnect/: xnect.hpp  xnect_implementation.h
